--- a/index.css
+++ b/index.css
@@ -1,12 +1,11 @@
 body {
     text-align: center;
-    background-color: #f2f2f2; /* 淡灰色背景 */
+    background-color: #7f7979; /* 淡灰色背景 */
   }
   
   form {
     margin: 40px auto;
     width: 500px;
-    margin-right: 480px;
   }
   
   label {
