--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color: #7f7979; /* 淡灰色背景 */
+    background-color: #f3ecec; /* 淡灰色背景 */
   }
   
   form {
